syntax = "proto3";

package plan;

option go_package = "codev42-implementation/proto/plan";

// Plan Service - 개발 계획 생성 및 관리
service PlanService {
  // 새로운 개발 계획 생성
  rpc GeneratePlan(GeneratePlanRequest) returns (GeneratePlanResponse);

  // 기존 계획 수정
  rpc ModifyPlan(ModifyPlanRequest) returns (ModifyPlanResponse);

  // 계획 상세 조회
  rpc GetPlanById(GetPlanByIdRequest) returns (GetPlanByIdResponse);

  // 프로젝트의 계획 목록 조회
  rpc GetPlanList(GetPlanListRequest) returns (GetPlanListResponse);
}

// 메시지 정의
message Annotation {
  string Name = 1;        // 함수/메서드 이름
  string Params = 2;      // 매개변수
  string Returns = 3;     // 반환 타입
  string Description = 4; // 설명
}

message Plan {
  string ClassName = 1;              // 클래스명 (함수인 경우 빈 문자열)
  repeated Annotation Annotations = 2; // 함수/메서드 목록
}

// GeneratePlan 요청/응답
message GeneratePlanRequest {
  string Prompt = 1;     // 사용자 프롬프트
  string ProjectId = 2;  // 프로젝트 ID
  string Branch = 3;     // 브랜치명
}

message GeneratePlanResponse {
  int64 DevPlanId = 1;   // 생성된 개발 계획 ID
  string Language = 2;   // 프로그래밍 언어
  repeated Plan Plans = 3; // 계획 목록
}

// ModifyPlan 요청/응답
message ModifyPlanRequest {
  int64 DevPlanId = 1;     // 수정할 개발 계획 ID
  string Language = 2;     // 프로그래밍 언어
  repeated Plan Plans = 3; // 수정된 계획 목록
}

message ModifyPlanResponse {
  string Status = 1; // 상태 메시지
}

// GetPlanById 요청/응답
message GetPlanByIdRequest {
  int64 DevPlanId = 1; // 조회할 개발 계획 ID
}

message GetPlanByIdResponse {
  int64 DevPlanId = 1;     // 개발 계획 ID
  string ProjectId = 2;    // 프로젝트 ID
  string Branch = 3;       // 브랜치명
  string Language = 4;     // 프로그래밍 언어
  repeated Plan Plans = 5; // 계획 목록
}

// GetPlanList 요청/응답
message GetPlanListRequest {
  string ProjectId = 1; // 프로젝트 ID
  string Branch = 2;    // 브랜치명
}

message PlanListElement {
  int64 DevPlanId = 1; // 개발 계획 ID
  string Prompt = 2;   // 프롬프트
}

message GetPlanListResponse {
  repeated PlanListElement DevPlanList = 1; // 계획 목록
}
